--- a/index.html
+++ b/index.html
@@ -78,13 +78,16 @@
             events = [];
 
             for (let i = 0; i < items.length; i++) {
-                let title = items[i].getElementsByTagName("title")[0]?.textContent || 'Okänt evenemang';
+                let title = items[i].getElementsByTagName("title")[0]?.textContent || '';
 
                 const formattedDate = formatDateRange(title); // Extrahera och formatera datum
                 title = title.replace(/(\d{1,2}\s\w{3})(\s?-\s?\d{1,2}\s\w{3})?/gi, '').trim(); // Ta bort datum från titeln
 
-                // Kombinera datum och titel utan dubbletter
-                const displayTitle = formattedDate ? `${formattedDate}, ${title}` : title;
+                // Bygg upp titel utan överflödiga kommatecken
+                let displayTitle = formattedDate;
+                if (title) {
+                    displayTitle += `, ${title}`;
+                }
 
                 events.push({ title: displayTitle });
             }
