--- a/index.html
+++ b/index.html
@@ -83,11 +83,9 @@
                 const formattedDate = formatDateRange(title); // Extrahera och formatera datum
                 title = title.replace(/(\d{1,2}\s\w{3})(\s?-\s?\d{1,2}\s\w{3})?/gi, '').trim(); // Ta bort datum från titeln
 
-                // Bygg upp titel utan överflödiga kommatecken
-                let displayTitle = formattedDate;
-                if (title) { // Lägg bara till titel om den inte är tom
-                    displayTitle += `, ${title}`;
-                }
+                // Rensa onödiga kommatecken och bygg korrekt displayTitle
+                let cleanTitle = title.replace(/^\s*,\s*|\s*,\s*$/g, ''); 
+                let displayTitle = formattedDate ? `${formattedDate}, ${cleanTitle}` : cleanTitle;
 
                 events.push({ title: displayTitle });
             }
