--- a/index.html
+++ b/index.html
@@ -83,8 +83,11 @@
                 const formattedDate = formatDateRange(title); // Extrahera och formatera datum
                 title = title.replace(/(\d{1,2}\s\w{3})(\s?-\s?\d{1,2}\s\w{3})?/gi, '').trim(); // Ta bort datum från titeln
 
-                // Bygg korrekt displayTitle med mellanslag istället för komma
-                let displayTitle = formattedDate + (title ? ` ${title}` : '');
+                // Bygg korrekt displayTitle med mellanslag endast om titel finns
+                let displayTitle = formattedDate;
+                if (title.trim()) { 
+                    displayTitle += ` ${title}`;
+                }
 
                 events.push({ title: displayTitle });
             }
