--- a/index.html
+++ b/index.html
@@ -81,13 +81,10 @@
                 let title = items[i].getElementsByTagName("title")[0]?.textContent || '';
 
                 const formattedDate = formatDateRange(title); // Extrahera och formatera datum
-                title = title.replace(/(\d{1,2}\s\w{3})(\s?-\s?\d{1,2}\s\w{3})?/gi, '').trim(); // Ta bort datum från titeln
+                title = title.replace(/^\s*[\d\s\w\/\-]+/, '').trim(); // Ta bort datum i början av titeln
 
                 // Bygg korrekt displayTitle med mellanslag endast om titel finns
-                let displayTitle = formattedDate;
-                if (title.trim()) { 
-                    displayTitle += ` ${title}`;
-                }
+                let displayTitle = formattedDate + (title ? ` ${title}` : '');
 
                 events.push({ title: displayTitle });
             }
