--- a/index.html
+++ b/index.html
@@ -81,11 +81,10 @@
                 let title = items[i].getElementsByTagName("title")[0]?.textContent || '';
 
                 const formattedDate = formatDateRange(title); // Extrahera och formatera datum
-                title = title.replace(/^\s*[\d\s\w\/\-]+/, '').trim(); // Ta bort datum i början av titeln
+                title = title.replace(/^\s*\d{1,2}\s\w{3}(?:\s?-\s?\d{1,2}\s\w{3})?\s*/, '').trim(); // Ta bort datum i början och mellanslag
 
-                // Bygg korrekt displayTitle med endast mellanslag mellan datum och titel
-                let cleanTitle = title.trim();
-                let displayTitle = cleanTitle ? `${formattedDate} ${cleanTitle}` : formattedDate;
+                // Kombinera datum och titel med exakt ett mellanslag
+                const displayTitle = `${formattedDate} ${title}`.trim();
 
                 events.push({ title: displayTitle });
             }
