--- a/index.html
+++ b/index.html
@@ -5,17 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RSS Läsare</title>
     <style>
-        @font-face {
-            font-family: 'DIN Alternate';
-            src: url('DIN_Alternate_Bold.woff') format('woff');
-            font-weight: normal;
-            font-style: normal;
-        }
-
         body {
             background-color: black;
             color: white;
-            font-family: 'DIN Alternate', Arial, sans-serif;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
@@ -42,11 +35,11 @@
 <body>
 
 <div id="rssFeed">
-    <div id="eventTitle" class="event-title">Välkommen till Eskilstuna</div>
+    <div id="eventTitle" class="event-title">VÄLKOMMEN TILL ESKILSTUNA</div>
 </div>
 
 <script>
-    const rssUrl = 'https://api.allorigins.win/get?url=' + encodeURIComponent('https://visiteskilstuna.se/rest-api/rssService/getRssFeed?portletId=12.5b899160171ac5273c72ad9f&pageId=2.369be3c31580a19562d1977e');
+    const rssUrl = 'https://api.rss2json.com/v1/api.json?rss_url=' + encodeURIComponent('https://visiteskilstuna.se/rest-api/rssService/getRssFeed?portletId=12.5b899160171ac5273c72ad9f&pageId=2.369be3c31580a19562d1977e');
 
     let events = [];
     let currentEventIndex = 0;
@@ -70,35 +63,22 @@
         return '';
     }
 
-    function adjustFontSize(element, maxLength, baseFontSize = 30) {
-        const text = element.textContent.trim();
-        if (text.length > maxLength) {
-            const scaleFactor = Math.max(maxLength / text.length, 1);
-            element.style.fontSize = `${baseFontSize * scaleFactor}px`;
-        } else {
-            element.style.fontSize = `${baseFontSize}px`;
-        }
-    }
-
     async function fetchRSS() {
         try {
             const response = await fetch(rssUrl);
             if (!response.ok) throw new Error("Kunde inte hämta RSS-flödet.");
 
             const data = await response.json();
-            const parser = new DOMParser();
-            const xmlDoc = parser.parseFromString(data.contents, "text/xml");
+            const items = data.items;
 
-            const items = xmlDoc.getElementsByTagName("item");
             events = [];
 
             for (let i = 0; i < items.length; i++) {
-                let title = items[i].getElementsByTagName("title")[0]?.textContent || '';
-
+                let title = items[i].title || '';
                 const formattedDate = formatDateRange(title);
 
-                // Rensa bort datum och eventuella oönskade kommatecken
-                title = title.replace(/^(\d{1,2}\s\w{3}(?:\s?-\s?\d{1,2}\s?\w{3})?)\s*,?\s*/, '').trim();
+                // Ta bort datum från början och säkerställ rätt format
+                title = title.replace(/^(\d{1,2}\s\w{3}(?:\s?-\s?\d{1,2}\s?\w{3})?)\s*/, '').replace(/^,/, '').trim();
 
                 const displayTitle = `${formattedDate} ${title}`.trim();
 
@@ -123,8 +103,6 @@
             const currentEvent = events[currentEventIndex];
             eventTitle.textContent = currentEvent.title;
 
-            adjustFontSize(eventTitle, 31);
-
             currentEventIndex = (currentEventIndex + 1) % events.length;
         } else {
             resetToWelcomeMessage();
@@ -133,8 +111,7 @@
 
     function resetToWelcomeMessage() {
         const eventTitle = document.getElementById("eventTitle");
-        eventTitle.textContent = 'Välkommen till Eskilstuna';
-        adjustFontSize(eventTitle, 31);
+        eventTitle.textContent = 'VÄLKOMMEN TILL ESKILSTUNA'; // Alltid i versaler
     }
 
     fetchRSS();
