--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
 <div id="rssFeed">
-  <div id="eventTitle" class="event-title">VÄLKOMMEN TILL ESKILSTUNA</div>
+  <div id="eventTitle" class="event-title"></div>
 </div>
 
 <script>
